--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -13,6 +13,16 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('about') }}">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('add_property') }}"
+            >New Property</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('get_properties') }}"
+            >Properties</a
+          >
+        </li>
       </ul>
     </div>
   </div>
